# ToDoApp

./: CMakeLists.txt  README.md  main.cpp
include/: ToDoElement.h  ToDoList.h
resources/: list.json
src/: ToDoElement.cpp  ToDoList.cpp
